Initial commit of Flask application

--- a/templates/home.html
+++ b/templates/home.html
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
-                    <img src="{{ url_for('static', filename='images/ai_vision/ai_vision systems.png') }}" alt="AI Vision System" class="img-fluid floating-animation">
+                    <img src="{{ url_for('static', filename='images/ai_vision/ai_vision_systems.png') }}" alt="AI Vision System" class="img-fluid floating-animation">
                 </div>
             </div>
         </div>
