--- a/templates/founder.html
+++ b/templates/founder.html
@@ -275,7 +275,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('home') }}">
-                <img src="{{ url_for('static', filename='images/logo/logo_deep.jpg') }}" alt="DeepScope Logo" height="40" class="me-2">
+                <img src="{{ url_for('static', filename='images\logo\logo_deep.jpg') }}" alt="DeepScope Logo" height="40" class="me-2">
                 <span class="underline-animation">DeepScope</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -324,7 +324,7 @@
             <div class="founder-section">
                 <div class="row">
                     <div class="col-lg-4 text-center">
-                        <img src="static/images/founder/founder.jpg" alt="Ariful Mallick" class="founder-img">
+                        <img src="static\images\founder\founder.jpg" alt="Ariful Mallick" class="founder-img">
                         <h2>Ariful Mallick</h2>
                         <p class="text-muted">Founder & Chief AI Architect</p>
                         <div class="d-flex justify-content-center gap-3 mt-3">
