--- a/templates/founder.html
+++ b/templates/founder.html
@@ -275,7 +275,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('home') }}">
-                <img src="{{ url_for('static', filename='images\logo\logo_deep.jpg') }}" alt="DeepScope Logo" height="40" class="me-2">
+                <img src="static\images\logo\logo_deep.jpg" alt="DeepScope Logo" height="40" class="me-2">
                 <span class="underline-animation">DeepScope</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
